--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-uploader-react-component": "^7.6.0",
+    "jszip": "^3.2.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^0.9.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2"
   },
